[project]
name = "repl-nix-recyclingclassifierforcredobeauty"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=2.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pillow",
    "werkzeug",
    "elasticsearch>=8.0.0",
    "python-dotenv>=1.0.0",
]
